Added heading and paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Eng Goal Image</title>
 </head>
 <body>
+    <h1>DADA</h1>
+    <p>A parenting coach in your pocket</p>
+
     
 </body>
 </html>
