--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 <body>
     <h1>DADA</h1>
     <p>A parenting coach in your pocket</p>
+    <img src="./images/device mockup 1.svg" alt="mobile phone device showing DADA mobile interface">
+    <p>Most parenting resources are built with moms in mind.</p>
+    <p>We've created one fo you, Dad!</p>
+    <p>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</p>
+    <p>Here you will find:</p>
+    <p>Low-effort activity ideas to suit your mood and budget</p>
+    <img src="./images/penguin1.svg" alt="Picture of penguin with lightbulb idea">
+    <img src="./images/penguin2.svg" alt="Picture of angry penguin">
+    <p>Fast and clear answers to most common parenting challenges</p>
+    <p>Cliff-notes from top-rated parenting books (because who has the time to read the whole thing?)</p>
+    <img src="./images/penguin3.svg" alt="Picture of penguin reading a book">
+    <img src="./images/penguin4.svg" alt="Picture of penguin lifting weights">
+    <p>Longer reads for the SuperDads out there</p>
+
+
+
 
     
 </body>
