Added header, unordered list, and changed a bit of the code format

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Eng Goal Image</title>
 </head>
 <body>
+
+    <header>
     <h1>DADA</h1>
-    <p>A parenting coach in your pocket</p>
+    </header>
+
+    <h2>A parenting coach in your pocket</h2>
     <img src="./images/device mockup 1.svg" alt="mobile phone device showing DADA mobile interface">
     <p>Most parenting resources are built with moms in mind.</p>
     <p>We've created one fo you, Dad!</p>
@@ -22,10 +26,11 @@
     <img src="./images/penguin3.svg" alt="Picture of penguin reading a book">
     <img src="./images/penguin4.svg" alt="Picture of penguin lifting weights">
     <p>Longer reads for the SuperDads out there</p>
+    <ul>
+        <li>Contacts</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+    </ul>
 
-
-
-
-    
 </body>
 </html>
