Added styling to the .css document

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mystyle.css">
     <title>Eng Goal Image</title>
 </head>
 <body>
-
     <header>
         <div>9:41</div>
         <img src="./images/PenguinLogo.svg" alt="Picture of Dad and baby penguin">
@@ -35,6 +35,5 @@
             <li>Terms</li>
         </ul>
     </main>
-
 </body>
 </html>
