Added flexbox styling

--- a/index.html
+++ b/index.html
@@ -15,20 +15,30 @@
     <main>
         <div class="time">9:41</div>
 
+        <section id="Logo-and-Button">
         <div>
-            <img src="./images/PenguinLogo.svg" alt="Picture of Dad and baby penguin">
+            <img src="./images/PenguinLogo.svg" alt="Picture of Dad penguin and baby penguin">
+        </div>
+
+        <div>
             <h1>DADA</h1>
         </div>
 
         <div>
-            <h2>A parenting coach in your pocket</h2>
+            <h2 class="Button">Login</h2>
+        </div>
+        </section>
+
+        <div>
+            <h3>A parenting coach in your pocket</h3>
             <img src="./images/device mockup 1.svg" alt="mobile phone device showing DADA mobile interface">
             <p>Most parenting resources are built with moms in mind.</p>
             <p>We've created one fo you, Dad!</p>
+            <h4 class="Buttontwo">Get Dadvice</h4>
             <p>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</p>
             <p>Here you will find:</p>
         </div>
-
+        
         <div>
             <p><span>Low-effort activity ideas</span> to suit your mood and budget</p>
             <img src="./images/penguin1.svg" alt="Picture of penguin with lightbulb idea">
@@ -38,6 +48,7 @@
             <img src="./images/penguin3.svg" alt="Picture of penguin reading a book">
             <img src="./images/penguin4.svg" alt="Picture of penguin lifting weights">
             <p><span>Longer reads</span> for the SuperDads out there</p>
+            <h4 class="Buttontwo">Sign Up</h4>
         </div>
 
         <div> 
