--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header>
         <h1>End Goal Image</h1>
     </header>
-
     <main>
         <div class="time">9:41</div>
 
@@ -30,24 +29,49 @@
         </section>
 
         <div>
-            <h3>A parenting coach in your pocket</h3>
+            <h3>A parenting coach
+            <br>in your pocket
+            </h3>
+        <div>
             <img src="./images/device mockup 1.svg" alt="mobile phone device showing DADA mobile interface">
-            <p>Most parenting resources are built with moms in mind.</p>
+        </div>  
+            <p>Most parenting resources are 
+                <br>built with moms in mind.
+            </p>
+             <br>
             <p>We've created one fo you, Dad!</p>
+            <br>
+            <p>We want to empower fathers to parent with 
+                <br>confidence and enjoy more quality time 
+                <br>with their kids.
+            </p>
+        <div>
             <h4 class="Buttontwo">Get Dadvice</h4>
-            <p>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</p>
+        </div>
             <p>Here you will find:</p>
         </div>
         
         <div>
-            <p><span>Low-effort activity ideas</span> to suit your mood and budget</p>
-            <img src="./images/penguin1.svg" alt="Picture of penguin with lightbulb idea">
+            <p>
+                <span>Low-effort activity ideas</span> 
+                <br>to suit your mood and budget
+            </p>
             <img src="./images/penguin2.svg" alt="Picture of angry penguin">
-            <p><span>Fast and clear answers</span> to most common parenting challenges</p>
-            <p><span>Cliff-notes</span> from top-rated parenting books (because who has the time to read the whole thing?)</p>
-            <img src="./images/penguin3.svg" alt="Picture of penguin reading a book">
+            <img src="./images/penguin1.svg" alt="Picture of penguin with lightbulb idea">
+            <p><span>Fast and clear answers</span> 
+                <br>to most common 
+                <br>parenting challenges
+            </p>
+            <p><span>Cliff-notes</span> from top-rated 
+                <br>parenting books (because 
+                <br>who has the time to read the 
+                <br>whole thing?)
+            </p>
             <img src="./images/penguin4.svg" alt="Picture of penguin lifting weights">
-            <p><span>Longer reads</span> for the SuperDads out there</p>
+            <img src="./images/penguin3.svg" alt="Picture of penguin reading a book">
+            <p><span>Longer reads</span> for the 
+                <br>SuperDads out there
+            </p>
             <h4 class="Buttontwo">Sign Up</h4>
         </div>
 
