--- a/index.html
+++ b/index.html
@@ -1,87 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Eng Goal Image</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>End Goal Image</title>
+  </head>
+  <body>
     <header>
-        <h1>End Goal Image</h1>
+      <h1>End Goal Image</h1>
     </header>
     <main>
-        <div class="time">9:41</div>
+      <div class="time">9:41</div>
 
-        <section id="Logo-and-Button">
+      <section id="Logo-and-Button">
         <div>
-            <img src="./images/PenguinLogo.svg" alt="Picture of Dad penguin and baby penguin">
+          <img
+            src="./images/PenguinLogo.svg"
+            alt="Picture of Dad penguin and baby penguin"
+          />
         </div>
-
-        <div>
-            <h1>DADA</h1>
-        </div>
-
-        <div>
-            <h2 class="Button">Login</h2>
-        </div>
-        </section>
 
         <div>
-            <h3>A parenting coach
-            <br>in your pocket
-            </h3>
-        <div>
-            <img src="./images/device mockup 1.svg" alt="mobile phone device showing DADA mobile interface">
-        </div>  
-            <p>Most parenting resources are 
-                <br>built with moms in mind.
-            </p>
-             <br>
-            <p>We've created one fo you, Dad!</p>
-            <br>
-            <p>We want to empower fathers to parent with 
-                <br>confidence and enjoy more quality time 
-                <br>with their kids.
-            </p>
-        <div>
-            <h4 class="Buttontwo">Get Dadvice</h4>
-        </div>
-            <p>Here you will find:</p>
-        </div>
-        
-        <div>
-            <p>
-                <span>Low-effort activity ideas</span> 
-                <br>to suit your mood and budget
-            </p>
-            <img src="./images/penguin2.svg" alt="Picture of angry penguin">
-            <img src="./images/penguin1.svg" alt="Picture of penguin with lightbulb idea">
-            <p><span>Fast and clear answers</span> 
-                <br>to most common 
-                <br>parenting challenges
-            </p>
-            <p><span>Cliff-notes</span> from top-rated 
-                <br>parenting books (because 
-                <br>who has the time to read the 
-                <br>whole thing?)
-            </p>
-            <img src="./images/penguin4.svg" alt="Picture of penguin lifting weights">
-            <img src="./images/penguin3.svg" alt="Picture of penguin reading a book">
-            <p><span>Longer reads</span> for the 
-                <br>SuperDads out there
-            </p>
-            <h4 class="Buttontwo">Sign Up</h4>
+          <h1>DADA</h1>
         </div>
 
-        <div> 
-            <ul id="information-list">
-                <li>Contacts</li>
-                <li>Privacy</li>
-                <li>Terms</li>
-            </ul>
+        <div>
+          <h2 class="Button" link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap" rel="stylesheet">Login</h2>
         </div>
+      </section>
+
+    <section id="secondSec">
+      <div>
+        <h3 class="firstPar" link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@730&display=swap" rel="stylesheet">A parenting coach in<br/> your pocket</h3>
+        <div>
+          <img
+            class="phone"
+            src="./images/device mockup 1.svg"
+            alt="mobile phone device showing DADA mobile interface"
+          />
+        </div>
+        <p class="secondPar" link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@550&display=swap" rel="stylesheet">Most parenting resources are <br />built with moms in mind.</p>
+        <br />
+        <p class="thirdPar" link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">We've created one for you, Dad!</p>
+        <br />
+        <p>
+          We want to empower fathers to parent with <br />confidence and enjoy
+          more quality time <br />with their kids.
+        </p>
+        <div>
+          <h4 class="Buttontwo">Get Dadvice</h4>
+        </div>
+        <p>Here you will find:</p>
+      </div>
+
+      <div>
+        <p>
+          <span>Low-effort activity ideas</span>
+          <br />to suit your mood and budget
+        </p>
+        <img src="./images/penguin2.svg" alt="Picture of angry penguin" />
+        <img
+          src="./images/penguin1.svg"
+          alt="Picture of penguin with lightbulb idea"
+        />
+        <p>
+          <span>Fast and clear answers</span> <br />to most common
+          <br />parenting challenges
+        </p>
+        <p>
+          <span>Cliff-notes</span> from top-rated <br />parenting books (because
+          <br />who has the time to read the <br />whole thing?)
+        </p>
+        <img
+          src="./images/penguin4.svg"
+          alt="Picture of penguin lifting weights"
+        />
+        <img
+          src="./images/penguin3.svg"
+          alt="Picture of penguin reading a book"
+        />
+        <p><span>Longer reads</span> for the <br />SuperDads out there</p>
+        <h4 class="Buttontwo">Sign Up</h4>
+      </div>
+
+      <div>
+        <ul id="information-list">
+          <li>Contacts</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      </div>
+    </section>
     </main>
-</body>
+  </body>
 </html>
