Rearranged paragraphs and images.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display&display=swap" rel="stylesheet">
     <title>End Goal Image</title>
   </head>
   <body>
@@ -29,13 +32,13 @@
         <div>
           <h2 class="Button" link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap" rel="stylesheet">Login</h2>
+            <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap" rel="stylesheet">Login</h2>
         </div>
       </section>
 
-    <section id="secondSec">
+    <section id="second-section">
       <div>
-        <h3 class="firstPar" link rel="preconnect" href="https://fonts.googleapis.com">
+        <h3 class="first-par" link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@730&display=swap" rel="stylesheet">A parenting coach in<br/> your pocket</h3>
         <div>
@@ -45,57 +48,63 @@
             alt="mobile phone device showing DADA mobile interface"
           />
         </div>
-        <p class="secondPar" link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@550&display=swap" rel="stylesheet">Most parenting resources are <br />built with moms in mind.</p>
+        <p class="second-par">Most parenting resources are <br />built with moms in mind.</p>
         <br />
-        <p class="thirdPar" link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">We've created one for you, Dad!</p>
+        <p class="third-par">We've created one for you, Dad!</p>
         <br />
-        <p>
+        <p class="fourth-par">
           We want to empower fathers to parent with <br />confidence and enjoy
-          more quality time <br />with their kids.
+          more quality time with<br />their kids.
         </p>
         <div>
-          <h4 class="Buttontwo">Get Dadvice</h4>
+          <h4 class="button-two" link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">Get Dadvice</h4>
         </div>
-        <p>Here you will find:</p>
+        <p class="fifth-par">Here you will find:</p>
       </div>
 
-      <div>
-        <p>
-          <span>Low-effort activity ideas</span>
-          <br />to suit your mood and budget
-        </p>
-        <img src="./images/penguin2.svg" alt="Picture of angry penguin" />
-        <img
+      <section id="third-section">
+        <div>
+          <p class="sixth-par">
+          <span>Low-effort activity ideas</span> to
+          <br />suit your mood and budget
+          </p>
+        </div> 
+        <div>
+          <img id="penguin1"
           src="./images/penguin1.svg"
-          alt="Picture of penguin with lightbulb idea"
-        />
-        <p>
+          alt="Picture of penguin with lightbulb idea"/>
+        </div>
+      </section>
+      <section id="fourth-section">
+        <img id="penguin2" src="./images/penguin2.svg" alt="Picture of angry penguin" />
+        <p class="seventh-par">
           <span>Fast and clear answers</span> <br />to most common
           <br />parenting challenges
         </p>
-        <p>
+      </section>
+        <p class="eigth-par">
           <span>Cliff-notes</span> from top-rated <br />parenting books (because
           <br />who has the time to read the <br />whole thing?)
         </p>
-        <img
+        <img id="penguin4"
           src="./images/penguin4.svg"
           alt="Picture of penguin lifting weights"
         />
-        <img
+        <img id="penguin3"
           src="./images/penguin3.svg"
           alt="Picture of penguin reading a book"
         />
-        <p><span>Longer reads</span> for the <br />SuperDads out there</p>
-        <h4 class="Buttontwo">Sign Up</h4>
+        <p class="ninth-par"><span>Longer reads</span> for the <br />SuperDads out there</p>
+        <h4 class="button-two" link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">Sign Up</h4>
       </div>
 
       <div>
         <ul id="information-list">
-          <li>Contacts</li>
+          <li>Contact Us</li>
           <li>Privacy</li>
           <li>Terms</li>
         </ul>
