--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
       <h1>End Goal Image</h1>
     </header>
     <main>
-      <div class="time">9:41</div>
+
+      <section id="status-bar">
+      <div id="time">9:41</div>
+      <div><img id="cell-status" src="./images/cellstatus.png" alt="picture of cell phone status"/></div>
+      </section>
 
       <section id="Logo-and-Button">
         <div>
-          <img
-            src="./images/PenguinLogo.svg"
-            alt="Picture of Dad penguin and baby penguin"
-          />
+          <img class="two-penguins" src="./images/PenguinLogo.svg" alt="Picture of Dad penguin and baby penguin"/>
         </div>
 
         <div>
-          <h1>DADA</h1>
+          <h1 link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">DADA
+          </h1>
         </div>
 
         <div>
@@ -84,20 +88,26 @@
           <br />parenting challenges
         </p>
       </section>
+
+      <section id="fifth-section">
         <p class="eigth-par">
-          <span>Cliff-notes</span> from top-rated <br />parenting books (because
-          <br />who has the time to read the <br />whole thing?)
+          <span>Cliff-notes</span> from top-rated <br/>parenting books <I link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@1,300&display=swap" rel="stylesheet" class="sentence" >(because
+          <br/>who has the time to read the <br/>whole thing?)</I>
         </p>
-        <img id="penguin4"
-          src="./images/penguin4.svg"
-          alt="Picture of penguin lifting weights"
-        />
         <img id="penguin3"
           src="./images/penguin3.svg"
           alt="Picture of penguin reading a book"
         />
+      </section>
+
+      <section id="sixth-section">
+        <img id="penguin4" src="./images/penguin4-fixed.svg"alt="Picture of penguin lifting weights"/>
         <p class="ninth-par"><span>Longer reads</span> for the <br />SuperDads out there</p>
-        <h4 class="button-two" link rel="preconnect" href="https://fonts.googleapis.com">
+      </section>
+
+        <h4 class="button-two" id="sign-up" link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">Sign Up</h4>
       </div>
